syntax = "proto3";

package main;

import "buf/validate/validate.proto";

option go_package = "model-service/proto/model;cardpb";

message Card {
    string id = 1;
    string user_id = 2;
    int64 debit = 3;
    int64 credit = 4;
    string status = 5;
    string updated_at = 6;
}

message RequestCardRequest { string user_id = 1; }
message RequestCardResponse { Card card = 1; }

message ActivateCardRequest { string id = 1; }
message ActivateCardResponse { Card card = 1; }

message BlockCardRequest { string id = 1; }
message BlockCardResponse { Card card = 1; }

message UnblockCardRequest { string id = 1; }
message UnblockCardResponse { Card card = 1; }

message RetireCardRequest { string id = 1; }
message RetireCardResponse { Card card = 1; }

message CloseCardRequest { string id = 1; }
message CloseCardResponse { Card card = 1; }

message GetCardRequest { string id = 1; }
message GetCardResponse { Card card = 1; }

service CardService {
    rpc RequestCard(RequestCardRequest) returns (RequestCardResponse);
    rpc ActivateCard(ActivateCardRequest) returns (ActivateCardResponse);
    rpc BlockCard(BlockCardRequest) returns (BlockCardResponse);
    rpc UnblockCard(UnblockCardRequest) returns (UnblockCardResponse);
    rpc RetireCard(RetireCardRequest) returns (RetireCardResponse);
    rpc CloseCard(CloseCardRequest) returns (CloseCardResponse);
    rpc GetCard(GetCardRequest) returns (GetCardResponse);
}
